8.0.0-rc5
 - Release candidate for 8.0.0.
 - Any changes will be logged under "8.0.0".
 - You can now combine connection string & option pairs on connections! (#1133)
 - `pqxx::zview` default constructor now also zero-terminates.
 - Libpqxx exceptions now have a `std::stacktrace`, if available.
 - Replace generated config headers with just `config-compiler.h`. (#1152)
 - CMake build now filters `config-compiler.h`, like the autoconfig build does.
 - No longer generate `config-autotools.h`.
 - Build fix for MSVC 2026. (#1160)
 - Deprecated `extract_version.sh`; use `extract_version.py`.
 - Rewrote header/binary version compatibility check.
 - For `stream()`, a type must be convertible and move-constructible. (#1168)
8.0.0
 - C++20 is now the oldest C++ version that libpqxx supports.
 - Requires PostgreSQL 11 or better.
 - **Exception class hierarchy has changed.**  See `UPGRADING.md`.
 - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
 - **Result equality now only compares identity, not the data inside.**
 - **Row/field equality now only compares identity, not the data inside.**
 - **Row/field lifetimes have changed: see `row_ref` and `field_ref`.
 - **`pqxx::bytes` is now a vector of bytes, not a string of bytes.** (#924)
 - All libpqxx exceptions are now derived from `pqxx::failure`.
 - Use `pqxx::bytes::data()` instead of `pqxx::bytes::c_str()`.
 - The string conversion API has changed! (Old API should still work). (#948)
 - "String conversion" to `std::string_view` etc. is now supported. (#694)
 - Simpler to use: `pqxx::from_string()`, `pqxx::to_buf()`, `pqxx::into_bu()`.
 - `to_buf()` and `into_buf()` functions will no longer zero-terminate.
 - **Beware lifetime** when "converting" a string to `std::string_view`!
 - Conversion from string to `char const *` is no longer allowed.
 - Binary data can be any `std::contiguous_range` of `std::byte`. (#925)
 - Generic `quote()` takes `always_null` into account.